force-app/main/default/objects/TargetActuals_Mapping__c/TargetActuals_Mapping__c.object-meta.xml
<CustomObject>
    <label>TargetActuals Mapping</label>
    <nameField>
        <displayFormat>MAP-{0000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TargetActuals Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>