force-app/main/default/objects/TargetActuals_Mapping__c/fields/Invoice_item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice item</label>
    <referenceTo>Invoice_item__c</referenceTo>
    <relationshipLabel>TargetActuals Mappings</relationshipLabel>
    <relationshipName>TargetActuals_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>