force-app/main/default/objects/TargetActuals_Mapping__c/fields/Mapping_Id__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Id__c</fullName>
    <externalId>true</externalId>
    <label>Mapping Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>