force-app/main/default/objects/TargetActuals_Mapping__c/fields/TargetActuals__c.field-meta.xml
<CustomField>
    <fullName>TargetActuals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TargetActuals</label>
    <referenceTo>TargetActuals__c</referenceTo>
    <relationshipLabel>TargetActuals Mappings</relationshipLabel>
    <relationshipName>TargetActuals_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>